# laughing-octo-hipster

./: .gitignore  03.kdev4  CMakeLists.txt  a35.txt
ProjektfortschrittJan/: cpp4cg3.cpp  cpp4cg3.sln  cpp4cg3.vcxproj  cpp4cg3.vcxproj.filters  eingine.h  extlibs.props  glut_engine.cpp  glut_engine.h  window.cpp  window.h
ProjektfortschrittJan/Debug/: vc120.idb
ProjektfortschrittJan/Debug/cpp4cg3.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  cpp4cg3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2013/: ReadMe.txt  Window.cpp  Window.hpp  cpp4cg3.cpp  cpp4cg3.vcxproj  cpp4cg3.vcxproj.filters  extlibs.props
vs2013/controller/: engine.hpp  glut_engine.cpp  glut_engine.hpp
vs2013/view/: demo_window.cpp  demo_window.hpp  window.cpp  window.hpp
